# hack_douyin_tts

./: Dockerfile  Makefile  pyproject.toml  requirements.txt
src/: config.py  main.py  utils.py
