[tool.poetry]
name = "hack-douyin-tts"
version = "0.1.0"
description = ""
authors = ["liukl <1138493417@qq.com>"]
readme = "README.md"
packages = [{include = "hack_douyin_tts"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
fastapi = "^0.100.0"
pycryptodome = "^3.18.0"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
